<resources>

    <string name="app_name">mrliuframe</string>

    <string name="common_yes">是</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_del">删除</string>
    <string name="common_complete">完成</string>

    <string name="dialog_select_gender">选择性别</string>
    <string name="dialog_gender_man">男</string>
    <string name="dialog_gender_girl">女</string>
    <string name="dialog_gender_secret">保密</string>
    <string name="dialog_get_pic_item_camera">拍照</string>
    <string name="dialog_get_pic_item_gallery">从手机相册选择</string>
    <string name="dialog_permission_read_phone_state">应用需要读取电话状态信息否则无法正常运行，请重新操作。</string>
    <string name="dialog_permission_cancel">以后再说</string>
    <string name="dialog_permission_request">请求权限</string>
    <string name="dialog_permission_access_coarse_location">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="dialog_permission_setting">设置</string>

    <string name="toast_exit_app_str">再按一次退出程序</string>
    <string name="toast_edit_success">修改成功</string>
    <string name="toast_edit_failed">修改失败</string>
    <string name="toast_avatar_success">头像修改成功</string>
    <string name="toast_avatar_failed">头像修改失败</string>
    <string name="toast_uploading_failed">图片上传失败</string>
    <string name="toast_camera_error">相机唤起失败</string>

    <string name="ip_host_empty">请到设置输入IP和端口</string>

    <string name="feedback_title">意见反馈</string>
    <string name="feedback_edit_hint">请输入遇到的问题或建议，最多可输入120个字...</string>
    <string name="feedback_submit_succ">提交成功</string>

    <string name="photo_album">相册</string>
    <string name="media_choose_all">全选</string>
    <string name="media_choose_clean">取消选择</string>
    <string name="max_choose_photo">您最多只能选择%1$s张图片</string>
    <string name="photo_album_has_nothing">相册空荡荡的，无一张图片哦</string>
    <string name="please_choose_picture">请先选择图片</string>
    <string name="loading_photo_album">正在加载...</string>

    <string name="photo_err_view_image">无法查看图像</string>
    <string name="photo_viewer">%1$d / %2$d</string>
    <string name="photo_title_avatar">头像</string>
    <string name="photo_title_picture">图片</string>

    <string name="dialog_apk_findnew">发现新版本</string>
    <string name="dialog_apk_later">以后再说</string>
    <string name="dialog_apk_download">立即升级</string>
    <string name="dialog_apk_last_version">最新版本：%1$s \n</string>
    <string name="dialog_apk_download_ing">正在为您下载新版本</string>
    <string name="dialog_apk_download_require_enable">下载器已停用，请在设置中重新启用该功能</string>
    <string name="toast_download_start">开始下载...</string>
    <string name="setting_update_localnew">当前为最新版本</string>

    <string name="webview_url_empty">敬请期待</string>

    <string name="splash_ad_jump">跳过</string>


    <string name="action_settings">Settings</string>

    <string name="choose_ok">OK</string>

    <string name="input_title">Input Url:</string>

    <string name="back_title">BACK</string>

    <string name="change_title">Change</string>

    <string name="buffering">Buffering</string>

    <string name="title_activity_audio_player">AudioPlayerActivity</string>

    <string name="choose_video">Video</string>

    <string name="choose_audio">Audio</string>

    <string name="live_streaming">直播</string>

    <string name="playback">点播</string>

    <string name="play_setting">播放设置</string>

    <string name="decode_config">解码配置</string>

    <string name="sw_decode">软解</string>

    <string name="hw_decode">硬解</string>

    <string name="auto_decode">自动</string>

    <string name="dlg_ok">OK</string>

    <string name="dlg_cancel">Cancel</string>

    <string name="pls_choose_activity">[请选择测试 Activity]:</string>

    <string name="pls_choose_videopath">[输入或选择视频地址]:</string>

    <string name="pls_choose_setting">[请选择播放配置]:</string>

    <string name="input_video_path">手动输入测试视频地址</string>

    <string name="btn_local_file">本地文件</string>

    <string name="btn_play_setting">播放配置</string>

    <string name="btn_click_play">点击播放</string>

    <string name="btn_start">开始</string>

    <string name="btn_pause">暂停</string>

    <string name="btn_resume">继续</string>

    <string name="btn_stop">停止</string>
</resources>
