<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/c_ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_item_height">

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@mipmap/dialog_closed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/dialog_select_gender"
            android:textColor="@color/c_333333"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_line" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/layout_gender_man"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comment_item_height"
            android:gravity="center"
            android:text="@string/dialog_gender_man"
            android:textColor="@color/dialog_gender_txt_selector"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c_cccccc" />

        <TextView
            android:id="@+id/layout_gender_girl"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comment_item_height"
            android:gravity="center"
            android:text="@string/dialog_gender_girl"
            android:textColor="@color/dialog_gender_txt_selector"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c_cccccc" />

        <TextView
            android:id="@+id/layout_gender_secret"
            android:layout_width="match_parent"
            android:layout_height="@dimen/comment_item_height"
            android:gravity="center"
            android:text="@string/dialog_gender_secret"
            android:textColor="@color/dialog_gender_txt_selector"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/c_cccccc" />
    </LinearLayout>

</LinearLayout>